fix-some-bugs: - fix some php error - fix formbuilder jquery issue

--- a/App/Front/Resources/Views/block__header_front.phtml
+++ b/App/Front/Resources/Views/block__header_front.phtml
@@ -40,7 +40,7 @@
 
     <?php if (!empty($_SESSION)){ ?>
         <div class="front__link_BO">
-            <a href="/admin">Back-Office</a>
+            <a href="/admin/">Back-Office</a>
 
         </div>
     <?php } ?>
