session-management-improvement: fix bugs in session and login management

--- a/App/Admin/Resources/Views/admin_login.phtml
+++ b/App/Admin/Resources/Views/admin_login.phtml
@@ -17,7 +17,7 @@
             <h1>Admin login</h1>
         </header>
         <main>
-            <form action="/login-form" method="post">
+            <form class="admin-form" action="/login-check" method="post">
                 <div>
                     <label for="login">Login</label>
                     <input id="login" name="login" type="text"/>
