--- a/App/Admin/Resources/Views/admin_login.phtml
+++ b/App/Admin/Resources/Views/admin_login.phtml
@@ -17,7 +17,7 @@
             <h1>Admin login</h1>
         </header>
         <main>
-            <form action="/login-form" method="post">
+            <form class="admin-form <?= $this->vars['options']['deletePHP_SESSION_ID'] ? 'js-notAllowed' : '' ?>" action="/login-check" method="post">
                 <div>
                     <label for="login">Login</label>
                     <input id="login" name="login" type="text"/>
@@ -30,4 +30,5 @@
             </form>
         </main>
     </body>
+    <script src="../../../public/bundle.js"></script>
 </html>
